Initial commit: added frontend and backend folders and hiding operation is ok.

--- a/nearbyplacesapi/src/main/resources/application.properties
+++ b/nearbyplacesapi/src/main/resources/application.properties
@@ -1,15 +1,16 @@
+# Spring Application Name
 spring.application.name=nearbyplacesapi
 
-
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/placesnear_app
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Google Places API Key
-google.api.key=AIzaSyCZk29hMIgeqQoyOqzUV2G4RvFniVMeVvI
+google.api.key=${GOOGLE_API_KEY}
 
+# Server Port
 server.port=8070
 
