--- a/nearbyplacesapi/.gitignore
+++ b/nearbyplacesapi/.gitignore
@@ -31,3 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Sensitive Data ###
+# Add files with sensitive data (e.g., API keys, DB credentials) here.
+./src/main/resources/application.properties
