--- a/nearbyplacesapi/.gitignore
+++ b/nearbyplacesapi/.gitignore
@@ -35,3 +35,5 @@ build/
 ### Sensitive Data ###
 # Add files with sensitive data (e.g., API keys, DB credentials) here.
 ./src/main/resources/application.properties
+
+.env
