--- a/nearbyplacesapi/src/main/resources/application.properties
+++ b/nearbyplacesapi/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 # Spring Application Name
 spring.application.name=nearbyplacesapi
 
-# MySQL Database Configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
 # Google Places API Key
 google.api.key=${GOOGLE_API_KEY}
 
 # Server Port
 server.port=8070
+
+# PostgreSQL Database Configuration
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# Hibernate Configuration for PostgreSQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
